[package]
name = "aver"
version = "0.1.1"
authors = ["alexa <alexa.griffin42@gmail.com>"]
edition = "2018"
description = ""
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [ "wincon", "fileapi", "handleapi" ] }
