[package]
name = "aver"
version = "0.1.4"
authors = ["alexa <alexa.griffin42@gmail.com>"]
edition = "2018"
description = "A dead simple logging library for rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/alexa-griffin/aver"
homepage = "https://crates.io/crates/aver"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [ "wincon", "fileapi", "handleapi" ] }
